--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require foundation/normalize.css
+ *= require foundation/foundation.min.css
+ *= require_tree ./static/
+ * require_tree .
  */
