--- a/app/assets/stylesheets/static/static.scss
+++ b/app/assets/stylesheets/static/static.scss
@@ -32,7 +32,7 @@ header h3{
 
 #cinza{
 	padding-top: 5%;
-	padding-bottom: 5%;
+	margin: 0px;
 }
 
 #suggest{
@@ -40,10 +40,11 @@ header h3{
 }
 
 footer{
-	padding-bottom: 20px;
-	margin-bottom: 5px;
+	padding-top: 5%;
+	font-size: 14px;
 }
 
 footer a{
 	color: #cbb2b2;
+	padding-right: 20px;
 }
