--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -60,13 +60,26 @@
     
     <div class="panel" id="cinza">
       <div class="row">
-
         <h3>Recently added stores:</h3>
         <br/>
-        <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-        <p>Once you've exhausted the fun in this document, you should check out:</p>
-
-      </div>
+        <div class="store">
+          <a href="">
+            <div class="store-left">
+              <div class="store-name">
+                <h4>BitCoin Electronics</h4>
+              </div>
+              <div class="description">
+                Bitcoin Electronics sells everything that can bring you life back from the 80's.
+              </div>
+            </div>
+            <div class="store-right">
+              <div class="store-country">
+                <img src="http://foundation.zurb.com/docs/assets/img/examples/earth-th-sm.jpg" height="52" width="52" />
+              </div>
+            </div>
+          </a>
+        </div>
+    </div>
       <br/><br/>
       <div class="row">
         <div class="large-12 columns large-centered text-center">
