First Categories added. Categories generated by scaffold and with FriendlyId.

--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -37,19 +37,19 @@
           <nav>
             <div id="featured" class="small-8 large-12 columns text-center">
               <p>
-                <a href="">Electronics</a>
-                <a href="">Music</a>
-                <a href="">Books and Reading</a>
-                <a href="">Sports</a>
-                <a href="">Health & Personal Care</a>
-                <a href="">Toys</a>
+                <a href="<%= url_for categories_path + '/electronics' %>">Electronics</a>
+                <a href="<%= url_for categories_path + '/music' %>">Music</a>
+                <a href="<%= url_for categories_path + '/books-and-reading' %>">Books and Reading</a>
+                <a href="<%= url_for categories_path + '/sports' %>">Sports</a>
+                <a href="<%= url_for categories_path + '/health-personal-care' %>">Health & Personal Care</a>
+                <a href="<%= url_for categories_path + '/toys' %>">Toys</a>
               </p>
               
               <p>
-                <a href="">Softwares & Games</a>
-                <a href="">Food</a>
-                <a href="">Miscellaneous</a>
-                <a href="">Home & Garden</a>
+                <a href="<%= url_for categories_path + '/software-games' %>">Softwares & Games</a>
+                <a href="<%= url_for categories_path + '/food' %>">Food</a>
+                <a href="<%= url_for categories_path + '/miscellaneous' %>">Miscellaneous</a>
+                <a href="<%= url_for categories_path + '/home-and-garden' %>">Home & Garden</a>
               </p>
 
             </div>
