--- a/app/assets/stylesheets/static/static.css.scss
+++ b/app/assets/stylesheets/static/static.css.scss
@@ -16,13 +16,13 @@ header h1:hover, h2:hover, h3:hover{
 }
 
 #general-header{
-	min-height: 15% !important;
-	padding-top: 10px !important;
+	min-height: 10% !important;
+	// padding-top: 10px !important;
 }
 
 #general-header h1{
 	margin: 0px;
-	padding: 0px;
+	padding: 6px 0px 0px 0px;
 }
 
 #general-header h1 a{
