--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,30 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
-
-<%= link_to 'Back', categories_path %>
+<div class="panel" id="cinza">
+  <div class="row">
+  	<h4><a href="<%= url_for :controller => 'categories', :action => 'index' %>"><< All categories</a></h4><br>
+    <div class="large-8 medium-8 columns">
+	    <h3><%= @category.name %></h3><br>
+	    <a href="">
+	      <div class="store">
+	        <div class="store-left">
+	          <div class="store-name">
+	            <h4>BitCoin Electronics</h4>
+	          </div>
+	          <div class="description">
+	            Bitcoin Electronics sells everything that can bring you life back from the 80's.
+	          </div>
+	        </div>
+	        <div class="store-right">
+	          <div class="store-country">
+	            <img src="http://foundation.zurb.com/docs/assets/img/examples/earth-th-sm.jpg" height="52" width="52" />
+	          </div>
+	        </div>
+	      </div>
+	    </a>
+    </div>
+    <div class="large-4 medium-4 columns">
+    	<h4>By country: </h4>
+    	<% @countries.each do |country| %>
+    		<p><%= country.name %></p>
+    	<% end %>
+    </div>
+</div>
