--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,23 +3,39 @@
   	<h4><a href="<%= url_for :controller => 'categories', :action => 'index' %>"><< All categories</a></h4><br>
     <div class="large-8 medium-8 columns">
 	    <h3><%= @category.name %></h3><br>
-	    <a href="">
-	      <div class="store">
-	        <div class="store-left">
-	          <div class="store-name">
-	            <h4>BitCoin Electronics</h4>
-	          </div>
-	          <div class="description">
-	            Bitcoin Electronics sells everything that can bring you life back from the 80's.
-	          </div>
-	        </div>
-	        <div class="store-right">
-	          <div class="store-country">
-	            <img src="http://foundation.zurb.com/docs/assets/img/examples/earth-th-sm.jpg" height="52" width="52" />
-	          </div>
-	        </div>
-	      </div>
-	    </a>
+	    
+	    <% @category.item.each do |store| %>
+		    <% if store.isActive == 1 %>
+			    <a href="<%= url_for store.url_shortned %>" target="_blank" rel="nofollow">
+			      <div class="store">
+			        
+			        <div class="store-above">
+				        <div class="store-left">
+				          <div class="store-name">
+				            <h4><%= store.name %></h4>
+				          </div>
+				          <div class="description">
+				            <%= store.description %>
+				          </div>
+				        </div>
+			        </div>
+			        <!-- <div class="store-right">
+			          <div class="store-country">
+			            <% if false %>
+			            	<%= store.country.name %>
+			            <% end %>
+			            
+			            <img src="http://foundation.zurb.com/docs/assets/img/examples/earth-th-sm.jpg" height="52" width="52" />
+			          </div>
+			        </div> -->
+			        <div class="store-bottom">
+			        	<div class="left">#<%= store.category.name %></div>
+			        	<div class="right">#<%= store.country.name %></div>
+			        </div>
+			      </div>
+			    </a>
+		    <% end %>
+	    <% end %>
     </div>
     <div class="large-4 medium-4 columns">
     	<h4>By country: </h4>
