--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,23 +5,16 @@
     <h3>Categories:</h3>
     <br/>
     <% @categories.each do |category| %>
-    <a href="<%= url_for category %>">
-      <div class="store">
-        <div class="store-left">
-          <div class="store-name">
-            <h4><%= category.name %></h4>
+      <a href="<%= url_for category %>">
+        <div class="store">
+          <div class="store-above">
+            <div class="store-name">
+              <h4><%= category.name %> (<%= category.item.size %>)</h4>
+              <!--  This category have  stores. -->
+            </div>
           </div>
-          <!-- <div class="description">
-            Bitcoin Electronics sells everything that can bring you life back from the 80's.
-          </div> -->
         </div>
-        <!-- <div class="store-right">
-          <div class="store-country">
-            <img src="http://foundation.zurb.com/docs/assets/img/examples/earth-th-sm.jpg" height="52" width="52" />
-          </div>
-        </div> -->
-      </div>
-    </a>
+      </a>
     <% end %>
   </div>
   <br/><br/>
