Some changes in visual and functionality

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,6 @@
  *= require foundation/normalize.css
  *= require foundation/foundation.min.css
  *= require_tree ./static/
+ *= require_tree ./categories/
  * require_tree .
  */
