--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,7 @@
 
 		<%= yield %>
 
-		<% if false %>
-			<%= yield :footer %>
-		<% end %>
+		<%= render :partial => "layouts/footer"%>
 
 		<script>
 		  $(document).foundation();
