--- a/app/assets/stylesheets/static/static.css.scss
+++ b/app/assets/stylesheets/static/static.css.scss
@@ -66,6 +66,7 @@ header h1:hover, h2:hover, h3:hover{
 #cinza{
 	padding-top: 5%;
 	margin: 0px;
+	height: 100%;
 }
 
 #suggest{
@@ -73,8 +74,14 @@ header h1:hover, h2:hover, h3:hover{
 }
 
 footer{
-	padding-top: 5%;
+	/* padding-top: 5%; */
 	font-size: 14px;
+	border: 0px;
+	/* background-color: #d9d9d9; */
+}
+
+footer .panel{
+	border: 0px;
 }
 
 footer a{
@@ -116,7 +123,6 @@ footer a{
 }
 
 .store-bottom{
-	/* background-color: #ddd3d3; #bdb3b3 */
 	width: 100%;
 	height: 40px;
 	padding: 10px;
@@ -131,8 +137,3 @@ footer a{
 .store-bottom .right {
 	height: 100%;
 }
-
-/* .store-bottom p{
-	padding: 0px;
-	margin: 0px;
-} */
