--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -77,19 +77,14 @@
 <br/><br/>
 <div class="row">
   <div class="large-12 columns large-centered text-center">
-    <a href="" class="button large secondary">Add a store to our website</a>
+    <!-- <a href="<%= url_for new_item_path %>" data-reveal-id="myModal" data-reveal-ajax="true" class="button large secondary">Add a store to our website</a> -->
+    <%= link_to "Add a store to our website", '#', :class => "button large secondary", data: {:'reveal-id' => 'signupModal'} %>
+    <div id="signupModal" class="reveal-modal">
+      <%= render '/items/form' %>
+      <a class="close-reveal-modal">&#215;</a>
+    </div>
   </div>
 </div>
-
-<footer>
-  <div class="row" style="text-align: left;">
-    <%= link_to "Home Page", controller: 'static', action: 'index' %>
-    <%= link_to "About", controller: 'static', action: 'about' %>
-    <%= link_to "All categories", categories_path %>
-    <%= link_to "Advertise" %>
-    <%= link_to "Contact", controller: 'static', action: 'contact' %>
-  </div>
-</footer>
 </div>
 
 
