--- a/app/assets/stylesheets/static/static.css.scss
+++ b/app/assets/stylesheets/static/static.css.scss
@@ -66,7 +66,7 @@ header h1:hover, h2:hover, h3:hover{
 #cinza{
 	padding-top: 5%;
 	margin: 0px;
-	height: 100%;
+	min-height: 100%;
 }
 
 #suggest{
@@ -77,6 +77,8 @@ footer{
 	/* padding-top: 5%; */
 	font-size: 14px;
 	border: 0px;
+	bottom: 0;
+	left: 0;
 	/* background-color: #d9d9d9; */
 }
 
