--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,18 @@
 <header id="general-header">
     <div class="row collapse">
+      
       <div class="small-4 large-4 columns">
         <h1><%= link_to "BTC-Stores", :controller => "static", :action => "index" %></h1>
       </div>
       <div id="searchbar-top">
+        <%= form_tag items_path, :method => "get" do %>
         <div class="small-6 columns">
-          <input type="text" placeholder="Search stores by term, name or country..." />
+           <%= search_field_tag :search, params[:search], :id => "search_field", :placeholder => "Search stores by term, name or country..." %>
         </div>
         <div class="small-2 columns">
-          <a href="" class="postfix button">Search</a>
+          <%= submit_tag "Search", :class => "postfix button", :name => nil %>
         </div>
+        <% end %>
       </div>
     </div>
 </header>
