A lot of changes: 1-Finished search 2-Finished_create_new_store_page 3-Validations 4-sort_by_name_asc_in_new_store_page etc

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -20,7 +20,7 @@
   <br/><br/>
   <div class="row">
     <div class="large-12 columns large-centered text-center">
-      <a href="" class="button large secondary">Add a store to our website</a>
+      <a href="<%= url_for new_item_path %>" class="button large secondary">Add a store to our website</a>
     </div>
   </div>
 </div>
