--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New item</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', items_path %>
+<div class="panel" id="cinza">
+  <div class="row">
+  		<div class="large-6 large-centered columns">
+			<h1 class="text-center">New Store</h1>
+			<br />
+			<%= render 'form' %>
+		</div>
+	</div>
+</div>
