--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
            <%= search_field_tag :search, params[:search], :id => "search_field", :placeholder => "Search stores by term, name or country..." %>
         </div>
         <div class="small-2 columns">
-          <%= submit_tag "Search", :class => "postfix button", :name => nil %>
+          <%= submit_tag "Search", :class => "postfix button prefix", :name => nil %>
         </div>
         <% end %>
       </div>
