--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,7 +1,10 @@
 <%= form_for(@item) do |f| %>
   <% if @item.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
+      <% if false %>
+      <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2><% end %>
+
+      <h2>Can't add your store:</h2>
 
       <ul>
       <% @item.errors.full_messages.each do |msg| %>
@@ -12,29 +15,29 @@
   <% end %>
 
   <!-- Name -->
-  <%= f.label :name %>
+  <%= f.label :name, "Name:" %>
   <%= f.text_field :name %>
-  <br />
+  <!-- <br /> -->
 
   <!-- Description -->
-  <%= f.label :description %>
+  <%= f.label :description, "Description:" %>
   <%= f.text_area :description %>
-  <br />
+  <!-- <br /> -->
 
   <!-- URL Original -->
-  <%= f.label :url_original %>
+  <%= f.label :url_original, "URL:" %>
   <%= f.url_field :url_original %>
-  <br />
+  <!-- <br /> -->
 
   <!-- Country -->
-  <%= f.label :country_id %>
-  <%= f.collection_select :country_id, Country.all, :id, :name, include_blank: true %>
-  <br />
+  <%= f.label :country_id, "Country:" %>
+  <%= f.collection_select :country_id, Country.all.order("name asc"), :id, :name, include_blank: true %>
+  <!-- <br /> -->
 
   <!-- Category -->
-  <%= f.label :category_id %>
-  <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: true %>
-  <br />
+  <%= f.label :category_id, "Category:" %>
+  <%= f.collection_select :category_id, Category.all.order("name asc"), :id, :name, include_blank: true %>
+  <!-- <br /> -->
 
 
   <!-- Hidden fields: isActive -->
@@ -42,7 +45,7 @@
     <%= f.hidden_field :isActive, :value => 0 %>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="large-5 large-centered columns">
+    <%= f.submit "Add Store", :class => "postfix button" %>
   </div>
 <% end %>
