--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -75,18 +75,22 @@
             </div>
           </div>
         </a>
+        <br/><br />
       <% end %>
     <% end %>
 </div>
 <br/><br/>
 <div class="row">
   <div class="large-12 columns large-centered text-center">
-    <!-- <a href="<%= url_for new_item_path %>" data-reveal-id="myModal" data-reveal-ajax="true" class="button large secondary">Add a store to our website</a> -->
+    <a href="<%= url_for new_item_path %>" data-reveal-id="myModal" data-reveal-ajax="true" class="button large secondary">Add a store to our website</a>
+    
+    <!-- <% if false %>
     <%= link_to "Add a store to our website", '#', :class => "button large secondary", data: {:'reveal-id' => 'myModal'} %>
-    <div id="myModal" class="reveal-modal" data-reveal>
-      <%= render '/items/form' %>
+     <div id="myModal" class="reveal-modal" data-reveal>
+       <%= render '/items/form' %> 
       <a class="close-reveal-modal">&#215;</a>
-    </div>
+    </div> 
+    <% end %> -->
   </div>
 </div>
 </div>
