--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,7 +7,9 @@
 		    <% if @category.item.size > 0 %>
 			    <% @category.item.each do |store| %>
 				    <% if store.isActive == 1 %>
-					    <a href="<%= url_for store.url_shortned %>" target="_blank" rel="nofollow">
+					    <a href="<%= url_for store.url_shortned %>" 
+					    target="_blank" rel="nofollow" 
+					    class="country-link <%= store.country.short_name %>">
 					      <div class="store">
 					        <div class="store-above">
 						        <div class="store-left">
@@ -25,6 +27,8 @@
 					        </div>
 					      </div>
 					    </a>
+					    <br class="country-link"/>
+					    <br class="country-link"/>
 				    <% end %>
 			    <% end %>
 			<% else %>
@@ -35,9 +39,17 @@
 	    <div class="large-4 medium-4 columns">
 	    	<% if @category.item.size > 0 %>
 		    	<h3>By country: </h3><br/>
+		    	<a href="" 
+		    		class="country-row all">
+			    		<div class="country all">
+			    			All (<%= @category.item.size %>)
+			    		</div>
+		    		</a>
+
 		    	<% @countries.each do |country| %>
-		    		<a href="<%= url_for country_path + '/' + country.name %>">
-			    		<div class="country">
+		    		<a href="" 
+		    		class="country-row <%= country.short_name %>">
+			    		<div class="country <%= country.short_name %>">
 			    			<%= country.name %> (<%= country.item.size %>)
 			    		</div>
 		    		</a>
@@ -46,3 +58,50 @@
 	    </div>
 	</div>
 </div>
+
+<script>
+	$(document).ready(function(){
+
+		// Changing the style of the first country ("all")
+		// $(".country").first().css("background-color", "#ddd3d3");
+		$(".country").first().addClass("active");
+
+		// On click in a country
+		$(".country-row").on("click", function(event){
+			
+			// Preventing default action of click
+			event.preventDefault();
+
+			// Cleaning all background-colors
+			$('.country').removeClass("active");
+			// css("background-color","#FFFFFF");
+
+			// Hiding all countries
+			$(".country-link").hide();
+
+			// Getting the name of the selected country
+			country = $(this).attr('class');
+			country = country.split('country-row ')[1];
+			nameOfCountry = $("." + country);
+
+			console.log(country);
+
+			// Verify if the selected item is "All" or any other countrie
+			if(country == "all"){
+				
+				// Showing all countries
+				$(".country-link").show();
+
+				// Changing the style of "all"
+				$(".country").first().addClass("active");
+
+			}else{
+				// Showing the selected country
+				nameOfCountry.valueOf().show();
+
+				// Changing the style of the selected country
+				nameOfCountry.addClass("active");
+			}	
+		});
+	});
+</script>
