--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header id="general-header">
-    <div class="row collapse">
+    <div class="row">
       
       <div class="small-4 large-4 columns">
         <h1><%= link_to "BTC-Stores", :controller => "static", :action => "index" %></h1>
       </div>
-      <%= form_tag items_path, :method => "get", :html => { :style => "margin: 0px; padding: 0px;"} do %>
+      <%= form_tag items_path, :method => "get", :style => "margin: 0px; padding: 0px;" do %>
         <div id="searchbar-top">
           <div class="row collapse">
             
