Added a page to redirect user after store insertion

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,16 @@
-<p id="notice"><%= notice %></p>
+<div class="panel" id="cinza">
+	<div class="row">
 
-<%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
+		<% if false %>
+			<p id="notice"><%= notice %></p>
+		<% end %>
+
+		<div class="large-12 text-center large-centered">
+			<h1>Thanks for help us!</h1>
+			<br/><br/>
+			<h3>Your store will be analyzed and soon we will approve her in BTC-Stores.</h3>
+			<h5>While this doesn't happens, why you don't know <a href="<%= url_for static_about_path %>">who we are</a> or <a href="<%= url_for static_contact_path %>">contact us</a> for a coffee?</h5>
+		</div>
+
+	</div>
+</div>
