About page added.

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,2 +1,25 @@
-<h1>Static#about</h1>
-<p>Find me in app/views/static/about.html.erb</p>
+<div class="panel" id="cinza">
+  	<div class="row">
+    	
+    	<div class="large-12 columns">
+	    	<h1># About</h1>
+	    	<h3>Bitcoin will revolutionize the world, so join us.</h3>
+	    	<br/>
+
+	    	<h5>
+
+	    		<p>BTC-Stores is a website for who believe in Bitcoins - and who want better ways to buy and sell things with Bitcoin. We provide better ways to explore and find stores that accept bitcoins as payment method. With this, we want popularize Bitcoin and make this revolution a true.</p>
+
+	    		<hr>
+	    		
+	    		<p><strong>Fernando Paladini</strong> ~> Programmer, left-wing, really worries about the social part of the things and dream that one day will change the world. Open-source evangelist and defend a free world with same conditions to everyone. Have hobbies like music (play instruments), political, economics, philosophy, physics and art. Always will fight against <i>status quo</i>.</p>
+
+	    		<br/>
+
+	    		<p><strong>Guilherme Eufrasio Souza</strong> ~> Idealist, nerd, passionate with science and enthusiast of freedom of the information and knowledge. Believe in a fair society where corporations don't control the economy, but the people - a people that don't have a name and don't have a address, just a ideal.</p>
+	    	</h5>
+    	</div>
+	</div>
+</div>
+
+
