About page updated

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -10,6 +10,8 @@
 
 	    		<p>BTC-Stores is a website for who believe in Bitcoins - and who want better ways to buy and sell things with Bitcoin. We provide better ways to explore and find stores that accept bitcoins as payment method. With this, we want popularize Bitcoin and make this revolution a true.</p>
 
+	    		<p>We're always looking for any interesting proposals, so feel free to <a href="<%= url_for static_contact_path %>">contact us</a> about <b>anything</b>.</p>
+
 	    		<hr>
 	    		
 	    		<p><strong>Fernando Paladini</strong> ~> Programmer, left-wing, really worries about the social part of the things and dream that one day will change the world. Open-source evangelist and defend a free world with same conditions to everyone. Have hobbies like music (play instruments), political, economics, philosophy, physics and art. Always will fight against <i>status quo</i>.</p>
