Changed about page

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -14,11 +14,13 @@
 
 	    		<hr>
 	    		
+	    		<p>Maybe you want to know our <i>big</i> team. See a little summary about us below.</p>
+
 	    		<p><strong>Fernando Paladini</strong> ~> Programmer, left-wing, really worries about the social part of the things and dream that one day will change the world. Open-source evangelist and defend a free world with same conditions to everyone. Have hobbies like music (play instruments), political, economics, philosophy, physics and art. Always will fight against <i>status quo</i>.</p>
 
 	    		<br/>
 
-	    		<p><strong>Guilherme Eufrasio Souza</strong> ~> Idealist, nerd, passionate with science and enthusiast of freedom of the information and knowledge. Believe in a fair society where corporations don't control the economy, but the people - a people that don't have a name and don't have a address, just a ideal.</p>
+	    		<p><strong>Guilherme Sousa</strong> ~> Idealist, nerd, passionate with science and enthusiast of freedom of the information and knowledge. Believe in a fair society where corporations don't control the economy, but the people - a people that don't have a name and don't have a address, just a ideal.</p>
 	    	</h5>
     	</div>
 	</div>
