Changes in about page

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -8,7 +8,7 @@
 
 	    	<h5>
 
-	    		<p>BTC-Stores is a website for who believe in Bitcoins - and who want better ways to buy and sell things with Bitcoin. We provide better ways to explore and find stores that accept bitcoins as payment method. With this, we want popularize Bitcoin and make this revolution a true.</p>
+	    		<p>BTC-Stores is a website for who believe in Bitcoins - and who want better ways to buy and sell things with this wonderful cryptocurrency. We provide better ways to explore and find stores that accept this as payment method. With this, we want popularize Bitcoin and make this revolution a true.</p>
 
 	    		<p>We're always looking for any interesting proposals, so feel free to <a href="<%= url_for static_contact_path %>">contact us</a> about <b>anything</b>.</p>
 
