--- a/app/assets/stylesheets/static/static.css.scss
+++ b/app/assets/stylesheets/static/static.css.scss
@@ -69,6 +69,19 @@ header h1:hover, h2:hover, h3:hover{
 	min-height: 100%;
 }
 
+#cinza-home{
+	/* background-color: #f2f2f2;
+	width: 100%;
+	height: auto; */
+	margin: 0;
+	padding: 0;
+}
+
+#cinza-home .button{
+	margin: 0;
+
+}
+
 #suggest{
 	text-align: right;
 }
