--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 		<%= yield %>
 
-		<%= render :partial => "layouts/footer"%>
+		<%= render :partial => "layouts/footer" unless @render_header %>
 
 		<script>
 		  $(document).foundation();
