--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -20,7 +20,7 @@
 
 	    		<br/>
 
-	    		<p><strong>Guilherme Sousa</strong> ~> Idealist, nerd, passionate with science and enthusiast of freedom of the information and knowledge. Believe in a fair society where corporations don't control the economy, but the people - a people that don't have a name and don't have a address, just a ideal.</p>
+	    		<p><strong>Guilherme Passos</strong> ~> Idealist, nerd, passionate with science and enthusiast of freedom of the information and knowledge. Believe in a fair society where corporations don't control the economy, but the people - a people that don't have a name and don't have a address, just a ideal.</p>
 	    	</h5>
     	</div>
 	</div>
