--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,2 +1,16 @@
-<h1>Static#contact</h1>
-<p>Find me in app/views/static/contact.html.erb</p>
+<div class="panel" id="cinza">
+  	<div class="row">
+		<h1># Contact</h1>
+		<h3>Want talk with us about anything? You're in the right place.</h3>
+		<br />
+
+		<h5>
+
+			We love hear stories and talk about anything. If you have any thing that you want comment with us, please feel free to contact us right now - we always will reply your e-mail.
+
+			<br/><br/>
+			Contact us at <a href="mailto:fernandopalad@gmail.com">fernandopalad@gmail.com</a>.
+
+		</h5>
+	</div>
+</div>
