Bug in Country / Category_path

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -50,7 +50,7 @@
 		    		<a href="" 
 		    		class="country-row <%= country.short_name %>">
 			    		<div class="country <%= country.short_name %>">
-			    			<%= country.name %> (<%= country.item.size %>)
+			    			<%= country.name %> (<%= country.item.where("category_id = #{@category.id}").size %>)
 			    		</div>
 		    		</a>
 		    	<% end %>
