--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
         <%= link_to "Home Page", controller: 'static', action: 'index' %>
 	    <%= link_to "About", controller: 'static', action: 'about' %>
 	    <%= link_to "All categories", categories_path %>
-	    <%= link_to "Advertise" %>
+	    <% if false %><%= link_to "Advertise" %><% end %>
 	    <%= link_to "Contact", controller: 'static', action: 'contact' %>
       </div>
     </div>
