--- a/app/assets/stylesheets/static/static.css.scss
+++ b/app/assets/stylesheets/static/static.css.scss
@@ -2,6 +2,7 @@ html, body{
 	height: 100%;
 }
 
+/* General header */
 header{
 	width: 100%;
 	background-color: #000;
@@ -9,10 +10,6 @@ header{
 
 header h1, h2, h3{
 	color: #FFF;
-}
-
-header h1:hover, h2:hover, h3:hover{
-	
 }
 
 #general-header{
@@ -36,13 +33,17 @@ header h1:hover, h2:hover, h3:hover{
 	transition: color 0.3s linear 0.1s;
 }
 
-#index-header{
-	min-height: 90%; 
-	padding-top: 10%;
+/* Index.html.erb stylesheet */
+#index-main{
+	padding: 10% 0% 0% 0%;
+	background-color: #000;
+	min-height: 90%;
+	width: 100%;
+	margin: 0;
 }
 
-#index-header h3{
-	margin-bottom: 100px;
+#index-main h3{
+	margin-bottom: 50px;
 }
 
 #searchbar-top{
@@ -50,9 +51,12 @@ header h1:hover, h2:hover, h3:hover{
 	height: auto;
 }
 
-#center{
-	margin: auto;
-	text-align: center;
+#index-footer{
+	min-height: 10%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	background-color: #000;
 }
 
 #featured a{
@@ -69,30 +73,11 @@ header h1:hover, h2:hover, h3:hover{
 	min-height: 100%;
 }
 
-#cinza-home{
-	/* background-color: #f2f2f2;
-	width: 100%;
-	height: auto; */
-	margin: 0;
-	padding: 0;
-}
-
-#cinza-home .button{
-	margin: 0;
-
-}
-
-#suggest{
-	text-align: right;
-}
-
 footer{
-	/* padding-top: 5%; */
 	font-size: 14px;
 	border: 0px;
 	bottom: 0;
 	left: 0;
-	/* background-color: #d9d9d9; */
 }
 
 footer .panel{
@@ -109,7 +94,6 @@ footer a{
 	transition: all 0.2s linear 0.1s;
 	width: 100%;
 	height: auto;
-	/* padding: 10px; */
 }
 
 .active{
@@ -156,3 +140,5 @@ footer a{
 .store-bottom .right {
 	height: 100%;
 }
+
+
