--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,12 @@
-<footer>
-	<div class="panel">
-      <div class="row" style="text-align: left;">
-        <%= link_to "Home Page", controller: 'static', action: 'index' %>
-	    <%= link_to "About", controller: 'static', action: 'about' %>
-	    <%= link_to "All categories", categories_path %>
-	    <% if false %><%= link_to "Advertise" %><% end %>
-	    <%= link_to "Contact", controller: 'static', action: 'contact' %>
-      </div>
-    </div>
+<footer id="footer">
+	<div class="row">
+		<div class="large-12 large-centered text-center columns">
+			<%= link_to "Home Page", controller: 'static', action: 'index' %>
+		    <%= link_to "About", controller: 'static', action: 'about' %>
+		     <%= link_to "Add a store", new_item_path %>
+		    <%= link_to "All categories", categories_path %>
+		    <% if false %><%= link_to "Advertise" %><% end %>
+		    <%= link_to "Contact", controller: 'static', action: 'contact' %>
+		</div>
+	</div>
 </footer>
