--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer id="footer">
+<footer>
 	<div class="row">
 		<div class="large-12 large-centered text-center columns">
 			<%= link_to "Home Page", controller: 'static', action: 'index' %>
