Changes in Index

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,7 +1,7 @@
 <main id="index-main">
     <div class="row">
       <div class="small-12 large-12 columns text-center">
-        <h1>BTC-Stores</h1> 
+        <h1 id="logo">BTC-Stores</h1> 
         <h3>The best way to find bitcoin stores worldwide.</h3>
       </div>
     </div>
